fix food add
